# giverny

./: DEMO_Getcutout_SciServer.ipynb  DEMO_Getdata_Matlab.m  DEMO_Getdata_SciServer.ipynb  DEMO_Getdata_local.ipynb  Getcutout_JHTDB_2-SciServer.ipynb  Getcutout_JHTDB_2-local.ipynb  Getcutout_JHTDB_2.ipynb  Getcutout_JHTDB_2_SciServer.ipynb  Getdata_JHTDB_2-SciServer.ipynb  Getdata_JHTDB_2-local.ipynb  Getdata_JHTDB_2.ipynb  Getdata_JHTDB_2_SciServer.ipynb  Getdata_JHTDB_2_local.ipynb  README.md  Turbulence_on_FileDB-generalized.ipynb  giverny-version.txt  pyproject.toml  turbulence-version.txt  turbulence_data_processing-notebook.ipynb  turbulence_data_processing.py
giverny/: __init__.py  isotropic_cube.py  turbulence_data_processing.py  turbulence_dataset.py  turbulence_isotropic_cube.py  turbulence_toolkit.py
giverny/turbulence_gizmos/: basic_gizmos.py  constants.py  getCutout.py  getData.py  getVariable.py
schema/: README.md  jhtdb-cutout-schema.json  jhtdb-points-schema.json  jhtdb-schema.json  jhtdb-server-schema.json  jhtdb_schema.py
src/giverny/: isotropic_cube.py  turbulence_dataset.py  turbulence_toolkit.py
src/giverny/turbulence_gizmos/: basic_gizmos.py  constants.py  getCutout.py  getData.py  getVariable.py  variable_dy_grid_ys.py
src/givernylocal/: turbulence_dataset.py  turbulence_toolkit.py
src/givernylocal/turbulence_gizmos/: basic_gizmos.py  constants.py  variable_dy_grid_ys.py
src/givernymatlab/: getData.m
