[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "giverny"
version = "0.0.1"
authors = []
description = "giverny"
readme = "README.md"
requires-python = ">=3.7"
classifiers = []

[project.urls]
"Homepage" = "https://github.com/sciserver/turbulence2"
"Bug Tracker" = "https://github.com/sciserver/turbulence2/issues"
