[tool.poetry]
name = "giverny"
version = "2.2.6"
description = "codebase to query the Johns Hopkins Turbulence Database (JHTDB) datasets"
authors = ["Johns Hopkins Turbulence Database Group"]
license = "LICENSE.txt"
readme = "README.md"

[[tool.poetry.packages]]
include = "giverny"
from = "src"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
scipy = "^1.9.3"
sympy = "^1.12"
h5py = "^3.7.0"
matplotlib = "^3.6.2"
wurlitzer = "^3.0.3"
morton-py = "^1.3"
dill = "^0.3.6"
zarr = "^2.13.3"
bokeh = "2.4.3"
dask = "2022.11.0"
distributed = "2022.11.0"
pandas = "^1.5.1"
xarray = "^2022.11.0"
tqdm = "^4.64.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Homepage" = "https://github.com/sciserver/turbulence2"
"Bug Tracker" = "https://github.com/sciserver/turbulence2/issues"
