[tool.poetry]
name = "giverny"
version = "2.3.9"
description = "codebase to query the Johns Hopkins Turbulence Database (JHTDB) datasets"
authors = ["Johns Hopkins Turbulence Database Group"]
license = "LICENSE.txt"
readme = "README.md"

[[tool.poetry.packages]]
include = "giverny"
from = "src"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
scipy = "^1.9.3"
sympy = "^1.12"
h5py = "^3.7.0"
matplotlib = "^3.6.2"
wurlitzer = "^3.0.3"
morton-py = "^1.3"
dill = "^0.3.6"
zarr = "^2.13.3"
bokeh = "^2.4.3"
dask = "^2022.11.0"
pandas = "^1.5.1"
xarray = "^2022.11.0"
tqdm = "^4.64.1"
tenacity = "^8.1.0"
plotly = "^5.11.0"
attrs = "^23.2.0"
jsonschema = "^4.23.0"
jsonschema-specifications = "^2023.12.1"
nbformat = "^5.10.4"
referencing = "^0.35.1"
rpds-py = "^0.19.1"
jupyter-core = "^5.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Homepage" = "https://github.com/sciserver/giverny"
"Bug Tracker" = "https://github.com/sciserver/giverny/issues"
